{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 9,
  "lineage": "7f1e2ec1-8d44-1804-3db8-8623270d426d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:722777194664:internet-gateway/igw-0ab0f7eb76034e98c",
            "id": "igw-0ab0f7eb76034e98c",
            "owner_id": "722777194664",
            "tags": {
              "Name": "ecs-cluster_gateway",
              "built_by": "terraform"
            },
            "vpc_id": "vpc-051cb0a6c40f7d3fb"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d2cbddec16215a3e",
            "owner_id": "722777194664",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab0f7eb76034e98c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-cluster_route",
              "built_by": "terraform"
            },
            "vpc_id": "vpc-051cb0a6c40f7d3fb"
          },
          "depends_on": [
            "aws_internet_gateway.gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:722777194664:security-group/sg-0f9625a2767b7c587",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0f9625a2767b7c587",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "722777194664",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-cluster_security_group",
              "built_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-051cb0a6c40f7d3fb"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:722777194664:subnet/subnet-03bfa65b9c1150d1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03bfa65b9c1150d1d",
            "map_public_ip_on_launch": false,
            "owner_id": "722777194664",
            "tags": {
              "Name": "ecs-cluster_subnet",
              "built_by": "terraform",
              "subnet_type": "private"
            },
            "vpc_id": "vpc-051cb0a6c40f7d3fb"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:722777194664:subnet/subnet-02fd1883e8cf6fa27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02fd1883e8cf6fa27",
            "map_public_ip_on_launch": false,
            "owner_id": "722777194664",
            "tags": {
              "Name": "ecs-cluster_subnet",
              "built_by": "terraform",
              "subnet_type": "private"
            },
            "vpc_id": "vpc-051cb0a6c40f7d3fb"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:722777194664:subnet/subnet-01e3971624d3a8aa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.255.0/24",
            "id": "subnet-01e3971624d3a8aa6",
            "map_public_ip_on_launch": true,
            "owner_id": "722777194664",
            "tags": {
              "Name": "ecs-cluster_subnet",
              "built_by": "terraform",
              "subnet_type": "public"
            },
            "vpc_id": "vpc-051cb0a6c40f7d3fb"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:722777194664:subnet/subnet-0d2e44ca2304d9938",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.254.0/24",
            "id": "subnet-0d2e44ca2304d9938",
            "map_public_ip_on_launch": true,
            "owner_id": "722777194664",
            "tags": {
              "Name": "ecs-cluster_subnet",
              "built_by": "terraform",
              "subnet_type": "public"
            },
            "vpc_id": "vpc-051cb0a6c40f7d3fb"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:722777194664:vpc/vpc-051cb0a6c40f7d3fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0974cc541d347411a",
            "default_route_table_id": "rtb-0e7258ba8973c4109",
            "default_security_group_id": "sg-0aa9122a4f95da094",
            "dhcp_options_id": "dopt-355dd950",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-051cb0a6c40f7d3fb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e7258ba8973c4109",
            "owner_id": "722777194664",
            "tags": {
              "Name": "ecs-cluster_vpc",
              "built_by": "terraform"
            }
          }
        }
      ]
    }
  ]
}